src/components/PrayerTimes/PrayerTimes.css
.prayerBox {
  position: fixed;
  display: flex;
  flex-direction: column;
  border: gold solid 3px;
  border-right: 0;
  border-radius: 30px 0px 0px 30px;
  margin-top: -100px;
  padding: 20px;
  right: 0;
  gap: 5px;
  justify-content: space-between;
  align-items: center;
  backdrop-filter: blur(10px);
  color: white;
  background: rgba(0, 0, 0, 0.8);
  text-align: center;
}

.fajr, .dhuhr, .asr, .maghrib, .isha {
  font-size: 1.5rem;
}

.time {
  color: gold;
  font-size: 1.7rem;
  -webkit-text-stroke-width: 1px;
  /* -webkit-text-stroke-color: black; */
}

@media screen and (max-width: 960px) {
 .prayerBox {
  border: gold solid 3px;
   position: relative;
   width: 80%;
   height: 100%;
   border-radius: 30px;
   align-self: center;
   text-align: center;
   margin-top: 20px;
   width: 100%
 } 
}

